# test.helper.yandex.alice.flask

./: .coveragerc  .gitignore  .pylintrc  .pylintrc2  .travis.yml  LICENSE  MANIFEST.in  README.md  makefile  requirements.txt  setup.cfg  setup.py
.github/workflows/: pep257.yml  py2.yml  py3.yml
tester_alice_skill_flask/: __init__.py
tests/: buy_elephant.py  requirements.txt  test_buy_elephant.py
tests/test/: test_buy_elephant.py
