[metadata]
name = tester_alice_skill_flask
version = 1.1
author = Vitaly Bogomolov
author_email = mail@vitaly-bogomolov.ru
description = Class for autotests YandexAlice skill, that implemented as flask application.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vb64/test.helper.yandex.alice.flask
project_urls =
    Bug Tracker = https://github.com/vb64/test.helper.yandex.alice.flask/issues
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = tester_alice_skill_flask
